[package]
name = "picmaker"
version = "1.3"
edition = "2021"
description = "Makes arduino instructions from svg files"
authors = ["Jere Hasu"]
license = "GPL-3.0-or-later"
readme = "readme.md"
homepage = "https://wiki.aalto.fi/pages/viewpage.action?pageId=234042176"
repository = "https://github.com/Sahkopaja-ryhma-21/picmaker"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.7", features = ["derive"] }
inquire = "0.6.2"
roxmltree = "0.18.1"
serialport = "4.2.2"
